tool/src/c/snapshots/diplomat_tool__c__types__tests__result_types@MyStruct.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()

---
#ifndef MyStruct_H
#define MyStruct_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
extern "C" {
#endif
#include "result_box_MyStruct_uint8_t.h"

typedef struct MyStruct {
    ffi_result_box_MyStruct_uint8_t a;
} MyStruct;
#include "result_MyStruct_uint8_t.h"

ffi_result_MyStruct_uint8_t MyStruct_new();
void MyStruct_destroy(MyStruct* self);

#ifdef __cplusplus
}
#endif
#endif

